Maven is really not a good fit for MR Jars